@@ -1,3 +1,4 @@
+* Allow to update database at the end of restore
 * Add ir.model.access check get and set of ir.property
 * Add ModelSingleton
 * Move login test in res.user
